--- a/Exercise2.html
+++ b/Exercise2.html
@@ -13,9 +13,8 @@
             This is my first <b>html</b> page<br> cool! <!--no enter, only br-->
 
         </p>
-        <a href="https://www.mako.co.il/"> Next Page
-        </a>
-
+        <a href="https://www.mako.co.il/" target="_blank"> Open in new Page </a><br>
+        <img src="NewYork.jpg" alt = "This is new york" height="300px">
     </body>
 
 </html>
