second class upload

--- a/Exercise2.html
+++ b/Exercise2.html
@@ -5,16 +5,19 @@
             this is a web course example 21 A
         </title>
     </head>
-    <body>
-        <h1> Hello World !</h1>
+    <body style="color:darkgreen; background-color:lightblue; background-image: url('NewYork.jpg'); margin: 30px;">
+        <h1 style="color:hotpink; border: 2px solid hotpink"> Hello World !</h1>
         <h2> Hello World !</h2>
 
         <p>
             This is my first <b>html</b> page<br> cool! <!--no enter, only br-->
-
         </p>
-        <a href="https://www.mako.co.il/" target="_blank"> Open in new Page </a><br>
-        <img src="NewYork.jpg" alt = "This is new york" height="300px">
+        <a href="https://www.mako.co.il/" target="_blank"> Open Mako new Page </a><br><br>
+        <img src="NewYork.jpg" alt = "This is new york" height="200px"> <br>
+        <img src="images/Juice.jpg" alt="Juices from Barcelona" height="200px">
+        <!-- image is element, src is attribute, contain the name(src) and value ("whatever in here")-->
+        <!--why we use id ? in order to getElementById-->
+
     </body>
 
 </html>
