--- a/CVgrid.html
+++ b/CVgrid.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="Animation1.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +12,9 @@
     <div id="GridContainer">
         <div id="item1">Nitzan Agam CV</div>
         <div id="item2">Data Analyst<br>System Analyst<br>BI Developer</div>
-        <div id="item3">My contact info</div>
+        <div id="item3">My contact info:  <br><br> 
+            <button id="button" onclick="thankYou()">Click To linkedin URL</button><br><br>
+        </div>
     </div>
 </body>
 </html>
